@@ -13,4 +13,5 @@ Bug fixes:
 
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- getLayoutData now takes a widget mode chooser as argument, and renders
+  all the widgets.
